--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,6 @@ billiard==3.5.0.2
 celery==4.0.2
 click==6.7
 cycler==0.10.0
-Cython==0.20
 dlib==19.1.0
 docker==2.2.1
 docker-pycreds==0.2.1
@@ -48,16 +47,16 @@ pyparsing==2.2.0
 python-dateutil==2.6.0
 python-editor==1.0.3
 pytz==2017.2
-pyvision==0.3.1
 requests==2.13.0
 scipy==0.19.0
 simplejson==3.10.0
 six==1.10.0
 SQLAlchemy==1.1.5
 subprocess32==3.2.7
-tracking==0.0.0
 vine==1.1.3
 visitor==0.1.3
 Werkzeug==0.12.1
 wsgilog==0.3.1
 WTForms==2.1
+-e git+https://github.com/junjuew/vatic_tracking.git#egg=tracking
+-e git+https://github.com/junjuew/pyvision.git#egg=pyvision
