allow user sign-up. stop tracking turkic build

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ image_list
 label_list
 dataset
 eval
+vatic/dependencies/turkic/dist/turkic-0.2.5-py2.7.egg
+vatic/dependencies/turkic/turkic.egg-info
