--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,6 @@ image_list
 label_list
 dataset
 eval
-vatic/dependencies/turkic/dist/turkic-0.2.5-py2.7.egg
-vatic/dependencies/turkic/turkic.egg-info
+vatic/dependencies/*
 migrations
 tmp/
