--- a/requirements.txt
+++ b/requirements.txt
@@ -58,6 +58,7 @@ visitor==0.1.3
 Werkzeug==0.12.1
 wsgilog==0.3.1
 WTForms==2.1
+gunicorn==19.7.1   
 -e git+https://github.com/junjuew/vatic_tracking.git#egg=tracking
 -e git+https://github.com/junjuew/pyvision.git#egg=pyvision
 -e git+https://github.com/junjuew/turkic.git#egg=turkic
