--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,43 @@
 alembic==0.9.1
 amqp==2.1.4
+aniso8601==1.1.0
 appdirs==1.4.3
+apt-xapian-index==0.45
+backports-abc==0.5
+backports.shutil-get-terminal-size==1.0.0
 backports.ssl-match-hostname==3.5.0.1
 billiard==3.5.0.2
+bleach==2.0.0
+cached-property==1.3.0
 celery==4.0.2
+certifi==2017.1.23
+chardet==2.0.1
 click==6.7
+cognitive-face==1.2.5
+colorama==0.2.5
+configobj==4.7.2
+configparser==3.5.0
 cycler==0.10.0
+Cython==0.20
+dask==0.8.2
+decorator==4.0.9
 dlib==19.1.0
 docker==2.2.1
+docker-compose==1.8.0
+docker-py==1.9.0
 docker-pycreds==0.2.1
+dockerpty==0.4.1
+docopt==0.6.2
 dominate==2.3.1
 easydict==1.6
-Flask==0.12
+entrypoints==0.2.2
+enum34==1.1.6
+fire==0.1.2
+Flask==0.12.2
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.4.0
 Flask-Migrate==2.0.3
+Flask-RESTful==0.3.5
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.2
 Flask-SuperAdmin==1.7.1
@@ -22,43 +45,113 @@ Flask-WTF==0.14.2
 funcsigs==1.0.2
 functools32==3.2.3.post2
 future==0.15.2
+graphviz==0.6
+gunicorn==19.7.1
+h5py==2.6.0
+html5lib==0.999999999
+httpie==0.9.9
+imutils==0.4.0
+iotop==0.6
 ipaddress==1.0.18
+ipykernel==4.5.2
+ipython==4.2.0
+ipython-genutils==0.1.0
+ipywidgets==6.0.0
 itsdangerous==0.24
-Jinja2==2.9.5
+Jinja2==2.9.6
+jsonschema==2.5.1
+jupyter==1.0.0
+jupyter-client==5.0.0
+jupyter-console==5.1.0
+jupyter-core==4.3.0
+Keras==2.0.3
 kombu==4.0.2
+Landscape-Client==14.12
+leveldb==0.193
 Mako==1.0.6
-MarkupSafe==0.23
+MarkupSafe==1.0
 matplotlib==2.0.0
+mistune==0.7.4
 mock==2.0.0
 munkres==1.0.8
+mxnet==0.9.4
 MySQL-python==1.2.5
+nbconvert==5.1.1
+nbformat==4.3.0
+networkx==1.11
+nose==1.3.7
+notebook==4.4.1
 numpy==1.12.1
 nvidia-ml-py==7.352.0
 olefile==0.44
 packaging==16.8
+PAM==0.4.2
+pandas==0.18.0
+pandocfilters==1.4.1
 parsedatetime==2.2
+pathlib2==2.1.0
 pbr==3.0.0
+pexpect==4.0.1
+pickleshare==0.7.2
 pika==0.10.0
 Pillow==4.0.0
+prompt-toolkit==1.0.13
 protobuf==3.2.0
+pssh==2.2.2
 psutil==5.2.1
+ptyprocess==0.5.1
+pycups==1.9.66
+Pygments==2.2.0
+pygobject==3.12.0
 pygogo==0.10.0
+pyOpenSSL==0.13
 pyparsing==2.2.0
+pyserial==2.6
+pysmbc==1.0.14.1
+python-apt===0.9.3.5ubuntu2
 python-dateutil==2.6.0
+python-debian===0.1.21-nmu2ubuntu2
 python-editor==1.0.3
+python-gflags==3.0.4
 pytz==2017.2
+-e git+https://github.com/junjuew/pyvision.git@4badf377bc667f637b431487c0ef45262ffc156f#egg=pyvision
+pyxdg==0.25
+PyYAML==3.11
+pyzmq==14.0.1
+qtconsole==4.2.1
 requests==2.13.0
+scikit-image==0.12.3
+scikit-learn==0.18
 scipy==0.19.0
+simplegeneric==0.8.1
 simplejson==3.10.0
+singledispatch==3.4.0.3
 six==1.10.0
+sklearn==0.0
 SQLAlchemy==1.1.5
+ssh-import-id==3.21
 subprocess32==3.2.7
+system-service==0.1.6
+terminado==0.6
+testpath==0.3
+texttable==0.8.4
+Theano==0.9.0
+toolz==0.7.4
+tornado==4.4.2
+-e git+https://github.com/junjuew/vatic_tracking.git@9816da1d8ea10440f3b7882ab5fe5c245e04043b#egg=tracking
+traitlets==4.2.1
+-e git+https://github.com/junjuew/turkic.git@cfbe46586427b6d98e9b3cd15a72db4ba1bb17ff#egg=turkic
+Twisted-Core==13.2.0
+Twisted-Web==13.2.0
+urllib3==1.7.1
 vine==1.1.3
+virtualenv==15.0.3
 visitor==0.1.3
-Werkzeug==0.12.1
+wcwidth==0.1.7
+webencodings==0.5
+websocket-client==0.37.0
+Werkzeug==0.12.2
+widgetsnbextension==2.0.0
 wsgilog==0.3.1
 WTForms==2.1
-gunicorn==19.7.1   
--e git+https://github.com/junjuew/vatic_tracking.git#egg=tracking
--e git+https://github.com/junjuew/pyvision.git#egg=pyvision
--e git+https://github.com/junjuew/turkic.git#egg=turkic
+zope.interface==4.0.5
